@@ -8,6 +8,7 @@
 # Super basic layout as I learn how to program a GUI in go 😳
 # Close button works though 😎
 # Layout taking better shape. Playing with NewSpacer() to format layout.
+# Client app has basic GUI built. Functionality next.
 
 # 0.0.40
 # Added tailwinds CSS and tested that it works.
